-Fixed appointments not being deleted along with the customer they with. -userID removed and username